ingress/istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: book-ingress
  namespace: default
spec:
  rules:
  - host: bookinfo.jomlocal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: istio-ingressgateway
             port: 
                number: 80
